; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-exynos.c_exynos_ohci_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-exynos.c_exynos_ohci_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.usb_hcd = type { i32 }
%struct.exynos_ohci_hcd = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @exynos_ohci_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exynos_ohci_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.usb_hcd*, align 8
  %4 = alloca %struct.exynos_ohci_hcd*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.usb_hcd* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.usb_hcd* %6, %struct.usb_hcd** %3, align 8
  %7 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %8 = call %struct.exynos_ohci_hcd* @to_exynos_ohci(%struct.usb_hcd* %7)
  store %struct.exynos_ohci_hcd* %8, %struct.exynos_ohci_hcd** %4, align 8
  %9 = load %struct.exynos_ohci_hcd*, %struct.exynos_ohci_hcd** %4, align 8
  %10 = getelementptr inbounds %struct.exynos_ohci_hcd, %struct.exynos_ohci_hcd* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %13 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 4
  %15 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %16 = call i32 @usb_remove_hcd(%struct.usb_hcd* %15)
  %17 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %18 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %17, i32 0, i32 0
  %19 = call i32 @exynos_ohci_phy_disable(%struct.TYPE_2__* %18)
  %20 = load %struct.exynos_ohci_hcd*, %struct.exynos_ohci_hcd** %4, align 8
  %21 = getelementptr inbounds %struct.exynos_ohci_hcd, %struct.exynos_ohci_hcd* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @clk_disable_unprepare(i32 %22)
  %24 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %25 = call i32 @usb_put_hcd(%struct.usb_hcd* %24)
  ret i32 0
}

declare dso_local %struct.usb_hcd* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.exynos_ohci_hcd* @to_exynos_ohci(%struct.usb_hcd*) #1

declare dso_local i32 @usb_remove_hcd(%struct.usb_hcd*) #1

declare dso_local i32 @exynos_ohci_phy_disable(%struct.TYPE_2__*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @usb_put_hcd(%struct.usb_hcd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
